# ecs-arkanoid

./: .gitignore  Makefile  README.md  meson.build
src/: Game.hpp  constants.hpp  main.cpp
src/components/: Ball.hpp  BallCollisionListener.hpp  BounceCollision.hpp  Brick.hpp  Circle.hpp  GameOverListener.hpp  Input.hpp  Link.hpp  Paddle.hpp  Position.hpp  Rectangle.hpp  Style.hpp  Tags.hpp  TimedEvent.hpp  Velocity.hpp  Visible.hpp  Wall.hpp  collision-listeners.hpp  powerups.hpp
src/engine-glue/: ecs.hpp
src/engine/ecs/: ComponentManager.hpp  DataQuery.hpp  ECS.hpp  World.hpp  include.hpp  lambda-argument-types.hpp
src/engine/metaprogramming/: for-each-type.hpp  lambda-argument-types.hpp
src/engine/misc/: check-percentage.hpp
src/engine/state-management/: EffectState.hpp  NullState.hpp  State.hpp  StateMachine.hpp  include.hpp
src/helpers/: aggregate-data.hpp  ball-paddle-contact.hpp
src/mixins/: PointLike.hpp
src/states/: RunningState.hpp  WaitingState.hpp
src/systems/: level-loading-system.cpp  level-loading-system.hpp  rendering-system.cpp  rendering-system.hpp
src/systems/collision-handler-system/: impl.cpp  include.hpp
src/systems/collision-system/: impl.cpp  include.hpp
src/systems/game-over-system/: impl.cpp  include.hpp
src/systems/input-system/: impl.cpp  include.hpp
src/systems/launching-system/: impl.cpp  include.hpp
src/systems/level-loading-system/: impl.cpp  include.hpp  level-loading-system.cpp
src/systems/movement-system/: impl.cpp  include.hpp
src/systems/rendering-system/: impl.cpp  include.hpp  rendering-system.cpp  (+1 more)
(+2 files in other folders)
